testsuite/tests/th/T13968.stderr

T13968.hs:6:2: error:
    Cannot redefine a Name retrieved by a Template Haskell quote: succ
